--- a/app/src/main/res/layout-sw600dp-land/content_recipe_detail.xml
+++ b/app/src/main/res/layout-sw600dp-land/content_recipe_detail.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.alit.bakingappnano.RecipeDetailActivity"
     tools:showIn="@layout/activity_recipe_detail">
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/checkTablet"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
         <fragment
             android:id="@+id/masterDetailFragment"
@@ -29,17 +33,15 @@
 
     </FrameLayout>
 
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/divider"/>
+
     <FrameLayout
         android:id="@+id/stepContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"/>
 
-    <!--<android.support.v4.view.ViewPager-->
-        <!--android:id="@+id/stepDetailViewPager"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:visibility="gone">-->
-
-    <!--</android.support.v4.view.ViewPager>-->
-
-</FrameLayout>
+</LinearLayout>
