--- a/app/src/main/res/layout-sw600dp/content_recipe_detail.xml
+++ b/app/src/main/res/layout-sw600dp/content_recipe_detail.xml
@@ -9,6 +9,7 @@
     tools:showIn="@layout/activity_recipe_detail">
 
     <FrameLayout
+        android:id="@+id/checkTablet"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -32,14 +33,6 @@
     <FrameLayout
         android:id="@+id/stepContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <!--<android.support.v4.view.ViewPager-->
-        <!--android:id="@+id/stepDetailViewPager"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:visibility="gone">-->
-
-    <!--</android.support.v4.view.ViewPager>-->
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
