--- a/app/src/main/res/layout-land/step_detail_fragment_layout.xml
+++ b/app/src/main/res/layout-land/step_detail_fragment_layout.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="No Video"
+        android:text="@string/step_detail_no_video"
         android:textColor="@color/divider"
         android:visibility="visible"
         android:gravity="center"/>
