--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alit.bakingappnano.recipeDetail.RecipeDetailActivity">
+    tools:context="com.example.alit.bakingappnano.settings.SettingsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_recipe_detail" />
+    <include layout="@layout/content_settings" />
 
 </android.support.design.widget.CoordinatorLayout>
