--- a/app/src/main/res/layout/master_detail_fragment_layout.xml
+++ b/app/src/main/res/layout/master_detail_fragment_layout.xml
@@ -3,7 +3,6 @@
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/dimmerBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,13 +15,12 @@
             android:id="@+id/nameText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Ingredient"
+            android:text="@string/master_fragment_ingredient_label"
             android:textColor="@color/divider"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             android:layout_marginRight="150dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="10dp"
@@ -32,13 +30,12 @@
             android:id="@+id/quantityText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Quantity"
+            android:text="@string/master_fragment_quantity_label"
             android:textColor="@color/divider"
             app:layout_constraintBottom_toBottomOf="@+id/measureText"
             app:layout_constraintTop_toTopOf="@+id/nameText"
             app:layout_constraintLeft_toRightOf="@+id/nameText"
             android:layout_marginLeft="15dp"
-            app:layout_constraintVertical_bias="0.0"
             android:layout_marginRight="80dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="15dp"
@@ -48,7 +45,7 @@
             android:id="@+id/measureText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Measure"
+            android:text="@string/master_fragment_measure_label"
             android:textColor="@color/divider"
             android:layout_marginRight="10dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -64,9 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/nameText"
-            android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="parent">
 
         </android.support.v7.widget.RecyclerView>
@@ -85,11 +80,8 @@
             android:id="@+id/stepsRecyclerView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
             app:layout_constraintTop_toBottomOf="@+id/stepsDivider"
-            android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="parent">
 
 
