--- a/app/src/main/res/layout/step_detail_fragment_layout.xml
+++ b/app/src/main/res/layout/step_detail_fragment_layout.xml
@@ -39,7 +39,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    android:text="No Video"
+                    android:text="@string/step_detail_no_video"
                     android:textColor="@color/divider"
                     android:visibility="visible"
                     android:gravity="center"/>
@@ -103,7 +103,7 @@
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
                 android:textColor="@color/secondary_text"
-                android:text="Back"/>
+                android:text="@string/step_detail_back"/>
 
         </android.support.v7.widget.CardView>
 
@@ -115,6 +115,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             app:cardBackgroundColor="@color/colorAccent"
             app:cardElevation="0dp">
 
@@ -126,7 +127,7 @@
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
                 android:textColor="@color/icons"
-                android:text="Next"/>
+                android:text="@string/step_detail_next"/>
 
         </android.support.v7.widget.CardView>
 
