--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/nav_settings"
-        android:title="@string/settingsActivity_title"
-        android:icon="@drawable/settings_icon_24dp"/>
+        android:title="@string/settingsActivity_title"/>
 
     <item
         android:id="@+id/nav_about"
-        android:title="@string/aboutActivity_title"
-        android:icon="@drawable/about_icon_24dp"/>
+        android:title="@string/aboutActivity_title"/>
 
 </menu>
