--- a/app/src/main/res/layout-sw600dp/content_recipe_detail.xml
+++ b/app/src/main/res/layout-sw600dp/content_recipe_detail.xml
@@ -25,7 +25,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="18dp"
-            android:src="@drawable/widget_list_icon_24dp"
+            app:ico_icon="@string/gmd_content_copy"
+            app:ico_color="@color/icons"
+            app:ico_size="24dp"
             app:backgroundTint="@color/colorAccent"/>
 
     </FrameLayout>
